--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   animations: ^2.0.11
   flutter_svg: ^2.0.10+1
   pin_code_text_field: ^1.8.0
+  timeline_tile: ^2.0.0
+  google_fonts:
 
 dev_dependencies:
   flutter_test:
