--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   timeline_tile: ^2.0.0
   google_fonts:
   share_plus: ^9.0.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
