--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,21 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools = "http://schemas.android.com/tools">
+
+    <uses-permission android:name = "android.permission.INTERNET" />
+    <uses-permission android:name = "android.permission.CAMERA" />
+    <uses-permission android:name = "android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VISUAL_USER_SELECTED" />
+    <uses-permission
+        android:name = "android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore = "ScopedStorage" />
+    <uses-permission
+        android:name = "android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion = "32" />
+
+    <uses-feature
+        android:name = "android.hardware.camera"
+        android:required = "true" />
+
     <application
         android:name="${applicationName}"
         android:label="@string/app_name"
