--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,19 @@ dependencies:
   google_fonts:
   share_plus: ^9.0.0
   lottie: ^3.1.2
+  flutter_spinkit: ^5.2.1
+  swipe_refresh: ^1.1.2
+  dio: ^5.5.0+1
+  pretty_dio_logger: ^1.4.0
+  shimmer: ^3.0.0
+  pinput: ^5.0.0
+  cached_network_image: ^3.4.0
+  device_info_plus: ^10.1.2
+  image_picker: ^1.1.2
+  permission_handler: ^11.3.1
+  intl: ^0.20.0
+  flutter_pdfview: ^1.3.4
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -33,17 +46,34 @@ dev_dependencies:
 
 
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.11
+  flutter_gen_runner:
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
+flutter_gen:
+  output: lib/app/gen/
+  line_length: 80
+  assets:
+    outputs:
+      style: camel-case
+  fonts:
+    outputs:
+      package_parameter_enabled: true
+
+  # Optional
+  integrations:
+    flutter_svg: true
+
+
 flutter:
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+
+
 
   # To add assets to your application, add an assets section, like this:
   assets:
